--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
     "description": "API for piston - a high performance code execution engine",
     "main": "src/index.js",
     "dependencies": {
+        "acorn": "^8.15.0",
         "body-parser": "^1.19.0",
         "chownr": "^2.0.0",
         "express": "^4.17.3",
