--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "acorn": "^8.15.0",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "chownr": "^2.0.0",
         "express": "^4.17.3",
         "express-ws": "^5.0.2",
